# iker-trade-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
iker-trade-bot/: docker-compose.yml  pyproject.toml  requirements.txt  signal_bot.db
iker-trade-bot/src/conversation/: signal_tracker.py
iker-trade-bot/src/core/: safety.py  types.py
iker-trade-bot/src/data/: collector.py
iker-trade-bot/tests/: test_integration.py  test_main_orchestration.py
iker-trade-bot/tests/conversation/: test_signal_tracker.py
iker-trade-bot/tests/core/: test_config.py  test_safety.py
iker-trade-bot/tests/data/: test_features.py
iker-trade-bot/tests/execution/: test_circuit_breaker.py
iker-trade-bot/tests/review/: test_reporter.py  test_reporter_extra.py
iker-trade-bot/tests/strategy/: test_pair_selector.py  test_trend_following.py
src/: main.py
src/backtest/: analysis.py  cli.py  runner.py
src/conversation/: __init__.py  position_manager.py  signal_tracker.py  state_machine.py
src/core/: calc.py  config.py  safety.py  types.py
src/data/: collector.py  features.py  storage.py  validator.py
src/execution/: circuit_breaker.py  exit_manager.py  order_manager.py  portfolio_guard.py  position_tracker.py  risk_calculator.py
src/review/: performance.py  reporter.py  retrainer.py  telegram_commands.py  trade_logger.py  trading_journal.py
src/service/: briefing_service.py  coin_analyzer.py  signal_generator.py
src/sizing/: adjustments.py  kelly.py  ml_model.py
src/strategy/: base.py  edge_detector.py  funding_rate.py  market_regime.py  pair_selector.py  position_monitor.py  trend_following.py
tests/: conftest.py  test_integration.py  test_main_bot.py  test_main_orchestration.py  test_qa_logic.py  tmp_edge_case_tests.py
tests/backtest/: test_cli.py  test_runner.py
tests/conversation/: test_position_manager.py  test_state_machine.py
tests/core/: test_calc.py  test_circuit_breaker_extra.py  test_config.py  test_safety.py  test_types.py
tests/data/: test_collector.py  test_features.py  test_storage.py  test_validator.py
tests/execution/: test_circuit_breaker.py  test_exit_manager.py  test_order_manager.py  test_portfolio_guard.py  test_position_tracker.py  test_position_tracker_extra.py  test_risk_calculator.py
tests/review/: test_performance.py  (+6 more)
(+14 files in other folders)
