[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-bot"
version = "0.2.0"
description = "Bybit interactive signal bot with multi-indicator scoring"
requires-python = ">=3.12"
dependencies = [
    "pybit>=5.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "apscheduler>=3.10.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
